# navigation_challenge_2025

./: README.md
maze_generator/: CMakeLists.txt  package.xml
maze_generator/config/: maze_config.yaml  maze_visualization.rviz
maze_generator/launch/: maze_generator.launch  maze_with_gazebo.launch
maze_generator/scripts/: maze_controller.py  maze_generator.py
navigation_challenge/: CMakeLists.txt  package.xml
navigation_challenge/launch/: navigation_world.launch  tiago.launch  tiago_base.launch
